--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@ header,main{
     margin-top: 1.5rem;
     margin-right: 1.5rem;
 }
+/* .card-all{
+    display: flex;
+} */
 .card{
     margin: 1.5rem auto;
     display: grid;
@@ -161,7 +164,7 @@ header,main{
     gap: 1.5rem;
     padding: 0 1.5rem;
     width: 100%;
- 
+    place-content: center;
 }
 .product .card{
     /* background-color: #FFFFFF; */
@@ -205,9 +208,14 @@ header,main{
 .feature{
     max-width: 1110px;
     margin: 3rem auto;
+    align-items: center;
 }
 
 .feature-img{
+    max-width: 404px;
+    max-height: 270px;
+}
+.feature-img img{
     width: 100%;
 }
 
@@ -280,7 +288,7 @@ header,main{
     font-weight: 500;
 }
 
-/* ------------------------responsive css------------------------ */
+/* ------------------------responsive css for medium device------------------------ */
 @media screen and (max-width: 768px) {
     .navbar .nav-links{
         display: none;
@@ -288,7 +296,7 @@ header,main{
     .navbar h2{
         font-size: 1.5rem;
         flex-direction: column;
-        margin-left: 5rem;
+        margin: 0 auto;
     }
     .banner{
         flex-direction: column-reverse;
@@ -325,7 +333,14 @@ header,main{
     }
     .card{
         grid-template-columns: repeat(1, 1fr);
-        margin-left: 2rem;
+        /* margin-left: 2rem; */
+        place-content: center;
+    }
+    .card-all{
+        display: grid;
+        place-content: center;
+        align-items: center;
+        justify-content: center;
     }
     .product a{
         text-align: center;
@@ -349,7 +364,88 @@ header,main{
         max-width: 100%;
         max-height: 100%;
         margin-bottom: 1.5rem;
-        margin-left: 1.5rem;
+        
     }   
 }
-/* ------------------------responsive css------------------------ */
+/* ------------------------responsive css small device------------------------ */
+
+@media screen and (min-width:768px) {
+    .banner{
+        
+        align-items: center;
+        justify-content: space-around;
+        margin: 5rem auto;
+        overflow-x: hidden;
+    }
+    .banner-img{
+        max-width: 257px;
+        max-height: 257px;
+        margin-bottom: 2rem;
+    }
+
+    .banner-content{
+        max-width: 350px;
+        max-height: 222px;
+        margin-right: 0;
+        text-align: left;
+       
+    }
+    .banner-content h1{
+        font-size: 1.5rem;
+    }
+    .banner-content p{
+        font-size: 0.8rem;
+    }
+    .banner-img img{
+        width: 30%;
+    }
+    .company-name{
+        grid-template-columns: repeat(7, 1fr);
+        margin: 0 auto;
+        width: 750px;
+    }
+    .card{
+        grid-template-columns: repeat(3, 1fr);
+        /* margin-left: 2rem; */
+        place-content: center;
+    }
+    .card-all{
+        display: grid;
+        place-content: center;
+        align-items: center;
+        justify-content: center;
+    }
+    /* .product a{
+        text-align: center;
+        margin-right: 0;
+        margin-bottom: 2rem;
+    } */
+    .feature{
+       
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
+    }
+    .feature-content{
+        margin-left: 0;
+        text-align: left;
+        align-items: start;
+        padding: 0 1.5rem;
+        margin-bottom: 2.5rem;
+        width: 45%;
+    }
+    .feature-content h1{
+        font-size: 1.2rem;
+    }
+    .feature-content p{
+        font-size: 0.8rem;
+        font-weight: 500;
+        margin-bottom: 0rem;
+    }
+    .feature-img{
+        max-width: 100%;
+        max-height: 100%;
+        margin-bottom: 1.5rem;
+        
+    }   
+}
